Fixed Bug: PulpCore Player didn't work correctly on Windows.